# clipboard_manager

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
clipboard_manager/: __init__.py  __main__.py  app.py  clipboard.py  config.py  google_sync.py
scripts/: build_exe.ps1
