[tool.poetry]
name = "clipboard-manager"
version = "0.1.0"
description = "Clipboard image saver GUI for Windows"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "clipboard_manager" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pillow = "^10.4.0"
pywin32 = "^306"

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^6.11.0", python = ">=3.11,<3.14" }

[tool.poetry.scripts]
clipboard-manager = "clipboard_manager.__main__:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

